# Glimpse

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
installer/: glimpse.nsi
src/: audio.rs  audio_ring.rs  capture.rs  encode.rs  hotkey.rs  log.rs  main.rs  mux.rs  overlay.rs  segment_ring.rs  settings.rs  tray.rs
